[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/HUD/ShardBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/HUD/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/HUD/CornerHUD.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/Dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/UIRoot.gd" type="Script" id=6]
[ext_resource path="res://Fonts/BitmapFont.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Scenes/UI/HUD/WormLevelContainer.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UIRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerHUD" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -41.0
margin_right = 88.0
margin_bottom = -10.0
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CornerHUD"]
margin_right = 78.0
margin_bottom = 18.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 1 )

[node name="ShardBar" parent="CornerHUD/Panel" instance=ExtResource( 1 )]

[node name="HealthBar" parent="CornerHUD" instance=ExtResource( 2 )]

[node name="WormLevelContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WormLevelLabel" type="Label" parent="WormLevelContainer"]
margin_left = 1856.0
margin_top = 1056.0
margin_right = 1908.0
margin_bottom = 1068.0
size_flags_horizontal = 8
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "Worm 1337"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProxyHolder" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" parent="DialogueContainer" instance=ExtResource( 4 )]

[node name="PauseMenuContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="PauseMenuContainer" instance=ExtResource( 5 )]
margin_left = 860.0
margin_top = 445.0
margin_right = 1060.0
margin_bottom = 635.0
